# shared_flag

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/shared_flag/: shared_flag.hpp  shared_flag_reader.hpp
src/: shared_flag.cpp  shared_flag_reader.cpp
test/: shared_flag.test.cpp  shared_flag_reader.test.cpp
